[package]
name = "shi"
version = "0.1.6"
authors = ["may h <mehrabhoque@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust library for crafting shell interfaces."
repository = "https://github.com/utagai/shi"
readme = "README.md"
keywords = ["shell", "interactive", "cli", "command", "readline"]
categories = ["command-line-interface"]
exclude = [
  "rsrc/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2"
rustyline = "17.0.1"
rustyline-derive = "0.11.1"
colored = "2.0.0"

[dev-dependencies]
anyhow = "1.0.36"
pretty_assertions = "0.6.1"
